Fixes the jumpy animation on the login screen.

--- a/shared-data/default-theme/css/default.css
+++ b/shared-data/default-theme/css/default.css
@@ -6288,6 +6288,10 @@ div.motd a.motd-signed {
   line-height: 14px;
   color: #ffffff;
 }
+/* Body */
+body {
+  overflow:hidden;
+}
 /* Content */
 #content {
   position: fixed;
